[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "bitlocker_drive_interface"
version = "0.1.0"
description = "Simple wrapper for programmatically unlocking and locking a Bitlocker protected drive on Windows."
readme = "README.md"
authors = [
    {name = "Steven Broaddus", email = "Steven.Broaddus220@gmail.com"},
]
license = { file = "LICENSE" }