[tool.poetry]
name = "bitlocker-drive-interface"
version = "0.1.0"
description = "Simple wrapper for programmatically unlocking and locking a Bitlocker protected drive on Windows."
authors = ["SBroaddus220 <steven.broaddus220@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "bitlocker_drive_interface"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
